Added fault tolerant distributed mapcache hazelcast